--- a/quickstart/configs/sys.yaml
+++ b/quickstart/configs/sys.yaml
@@ -79,7 +79,7 @@ sys:
               X-Frame-Options: ""
 
       dtm-ui:
-        uris: ["/dtm-ui*","/api/dtmsvr"]
+        uris: ["/dtm-ui*","/api/dtmsvr*"]
         upstream_id: dtm-ui
         plugins:
           ext-plugin-pre-req:
