--- a/.github/workflows/docker-image-ms.yml
+++ b/.github/workflows/docker-image-ms.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
 
-  build:
+  build-1:
 
     runs-on: ubuntu-latest
     steps:
@@ -38,3 +38,26 @@ jobs:
         run: docker-compose -f docker-compose.yml -f docker-compose.ms.yml push user saas sys realtime
 
           
+  build-2:
+
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build the docker image
+        run: docker-compose -f docker-compose.yml -f docker-compose.ms.yml build payment order product
+
+      - name: Docker login
+        if: |
+          github.event_name == 'push'
+          && github.repository == 'go-saas/kit'
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Push docker image
+        if: |
+          github.event_name == 'push'
+          && github.repository == 'go-saas/kit'
+
+        run: docker-compose -f docker-compose.yml -f docker-compose.ms.yml push payment order product
