--- a/.github/workflows/publish-dev.yml
+++ b/.github/workflows/publish-dev.yml
@@ -44,8 +44,8 @@ jobs:
             echo "$DOCKER_TAG"
             cd /app/go-saas-kit
             cp -r quickstart/demo/. quickstart/configs
-            sed -i -e 's/stripe_test_key/$STRIPE_TEST_KEY/g' quickstart/configs/payment.yaml
-            sed -i -e 's/stripe_test_webhook_key/STRIPE_TEST_WEBHOOK_KEY/g' quickstart/configs/payment.yaml
+            sed -i -e "s/stripe_test_key/$STRIPE_TEST_KEY/g" quickstart/configs/payment.yaml
+            sed -i -e "s/stripe_test_webhook_key/$STRIPE_TEST_WEBHOOK_KEY/g" quickstart/configs/payment.yaml
             
             sudo docker compose -f docker-compose.yml -f docker-compose.tracing.yml -f docker-compose.kafka.yml -f docker-compose.ms.yml pull
             sudo docker compose -f docker-compose.yml -f docker-compose.tracing.yml -f docker-compose.kafka.yml -f docker-compose.ms.yml up -d --remove-orphans
