fix: sync with apisix

--- a/order/menu/menu.yaml
+++ b/order/menu/menu.yaml
@@ -1,6 +1,6 @@
 menus:
   - name: "order"
-    path: "/order/*"
+    path: "/order"
     component: "LAYOUT"
     redirect: "/order/orders"
     is_preserved: true
