--- a/docker-compose.kafka.yml
+++ b/docker-compose.kafka.yml
@@ -1,27 +1,24 @@
 version: '3.7'
 services:
 
-  zookeeper:
-    image: docker.io/bitnami/zookeeper:3.8.1
-    environment:
-      - ALLOW_ANONYMOUS_LOGIN=yes
-    restart: always
-
   kafka:
-    image: docker.io/bitnami/kafka:3.4
+    image: bitnami/kafka:3.5.1
+    environment:
+      - KAFKA_CFG_PROCESS_ROLES=broker,controller
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://host.docker.internal:9094
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_CFG_NODE_ID=0
+      - KAFKA_KRAFT_CLUSTER_ID=abcdefghijklmnopqrstuv
+      - BITNAMI_DEBUG=yes
     ports:
       - "9094:9094"
-    environment:
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - ALLOW_PLAINTEXT_LISTENER=yes
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
-      - BITNAMI_DEBUG=yes
-    depends_on:
-      - zookeeper
-    restart: always
-
+    restart: unless-stopped
+    volumes:
+      - kafka_data:/bitnami/kafka
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
 #    ports:
@@ -30,3 +27,7 @@ services:
       KAFKA_CLUSTERS_0_NAME: local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
       SERVER_SERVLET_CONTEXT_PATH: /kafka-ui
+    restart: unless-stopped
+
+volumes:
+  kafka_data:
