--- a/quickstart/configs/payment.yaml
+++ b/quickstart/configs/payment.yaml
@@ -3,3 +3,5 @@ stripe:
   publish_key: stripe_publish_key
   private_key: stripe_test_key
   webhook_key: stripe_test_webhook_key
+  price_tables:
+    plan: prctbl_1O7KgaJYyL5pFgToY813JeWU
