--- a/quickstart/configs/apisix/dashboard_conf/conf.yaml
+++ b/quickstart/configs/apisix/dashboard_conf/conf.yaml
@@ -1,19 +1,4 @@
-#
-# Licensed to the Apache Software Foundation (ASF) under one or more
-# contributor license agreements.  See the NOTICE file distributed with
-# this work for additional information regarding copyright ownership.
-# The ASF licenses this file to You under the Apache License, Version 2.0
-# (the "License"); you may not use this file except in compliance with
-# the License.  You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
+#  https://github.com/apache/apisix-dashboard/blob/master/api/conf/conf.yaml
 
 conf:
   listen:
@@ -53,53 +38,97 @@ authentication:
   users:                # yamllint enable rule:comments-indentation
     - username: admin   # username and password for login `manager api`
       password: admin
-    - username: user
-      password: user
 
-plugins:                          # plugin list (sorted in alphabetical order)
+
+#oidc:
+#  enabled: false
+#  expire_time: 3600
+#  client_id: dashboard
+#  client_secret: dashboard
+#  auth_url: http://172.17.0.1:8080/auth/realms/master/protocol/openid-connect/auth
+#  token_url: http://172.17.0.1:8080/auth/realms/master/protocol/openid-connect/token
+#  user_info_url: http://172.17.0.1:8080/auth/realms/master/protocol/openid-connect/userinfo
+#  redirect_url: http://127.0.0.1:9000/apisix/admin/oidc/callback
+#  scope: openid
+
+plugins:
   - api-breaker
+  - authz-casbin
+  - authz-casdoor
   - authz-keycloak
+  - aws-lambda
+  - azure-functions
   - basic-auth
-  - batch-requests
+  # - batch-requests
+  - clickhouse-logger
+  - client-control
   - consumer-restriction
   - cors
+  - csrf
+  - datadog
   # - dubbo-proxy
   - echo
-  # - error-log-logger
+  - error-log-logger
   # - example-plugin
+  - ext-plugin-post-req
+  - ext-plugin-post-resp
+  - ext-plugin-pre-req
   - fault-injection
+  - file-logger
+  - forward-auth
+  - google-cloud-logging
   - grpc-transcode
+  - grpc-web
+  - gzip
   - hmac-auth
   - http-logger
   - ip-restriction
   - jwt-auth
   - kafka-logger
+  - kafka-proxy
   - key-auth
+  - ldap-auth
   - limit-conn
   - limit-count
   - limit-req
+  - loggly
   # - log-rotate
+  - mocking
   # - node-status
+  - opa
   - openid-connect
+  - opentelemetry
+  - openwhisk
   - prometheus
   - proxy-cache
+  - proxy-control
   - proxy-mirror
   - proxy-rewrite
+  - public-api
+  - real-ip
   - redirect
   - referer-restriction
   - request-id
   - request-validation
   - response-rewrite
+  - rocketmq-logger
+  - server-info
   - serverless-post-function
   - serverless-pre-function
-  # - skywalking
-  - opentelemetry                 # priority: 12009
+  - skywalking
+  - skywalking-logger
   - sls-logger
+  - splunk-hec-logging
   - syslog
   - tcp-logger
+  - traffic-split
+  - ua-restriction
   - udp-logger
   - uri-blocker
   - wolf-rbac
   - zipkin
-  - server-info
-  - traffic-split
+  - elasticsearch-logge
+  - openfunction
+  - tencent-cloud-cls
+  - ai
+  - cas-auth
